Paste Deployment News
=====================

1.3
---

* Added ``scheme`` option to ``PrefixMiddleware``, so you can force a
  scheme (E.g., when proxying an HTTPS connection over HTTP).

* Pop proper values into ``environ['paste.config']`` in
  ``ConfigMiddleware``.

1.1
---

* Any ``global_conf`` extra keys you pass to ``loadapp`` (or the other
  loaders) will show up as though they were in ``[DEFAULT]``, so they
  can be used in variable interpolation.  Note: this won't overwrite
  any existing values in ``[DEFAULT]``.

* Added ``force_port`` option to
  ``paste.deploy.config.PrefixMiddleware``.  Also the ``prefix``
  argument is stripped of any trailing ``/``, which can't be valid in
  that position.

1.0
---

* Added some documentation for the different kinds of entry points
  Paste Deploy uses.

* Added a feature to ``PrefixMiddleware`` that translates the
  ``X-Forwarded-Server`` header to ``Host``.

0.9.6
-----

* Added ``PrefixMiddleware`` which compensates for cases where the
  wsgi app is behind a proxy of some sort that isn't moving the prefix
  into the SCRIPT_NAME in advance.

* Changed _loadconfig() so that it works with Windows absolute paths.

* Make the error messages prettier when you call a function and fail
  to give an argument, like a required function argument.

0.5
---

* Made the ``paste_deploy`` template (used with ``paster create
  --template=paste_deploy``) more useful, with an example application
  and entry point.

0.4
---

* Allow filters to have ``filter-with`` values, just like
  applications.

* Renamed ``composit`` to ``composite`` (old names still work, but
  aren't documented).

* Added ``appconfig()`` to load along with ``loadapp()``, but return
  the configuration without invoking the application.

0.3
---

* Allow variable setting like::

    get local_var = global_var_name

  To bring in global variables to the local scope.

* Allow interpolation in files, like ``%(here)s``.  Anything in the