@@ -1,5 +1,6 @@
 [app:main]
 use = egg:FakeApp#basic_app
+example = test
 filter-with = filter1
 
 [filter:filter1]
